--- a/filmwebsearchplugin/package.json
+++ b/filmwebsearchplugin/package.json
@@ -2,7 +2,7 @@
   "name": "filmwebsearchplugin",
   "title": "Filmweb Search Plugin",
   "id": "jid1-Al6znCisBuHBZg",
-  "description": "Dodaje funkcje wyszukiwania zaznaczonego tekstu po kliknieciu prawym przyciskiem myszy.",
+  "description": "Dodaje funkcje wyszukiwania po kliknieciu prawym przyciskiem myszy na zaznaczony tekst.",
   "author": "pawelizycki@gmail.com",
   "license": "MPL 2.0",
   "version": "1.0"
